<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oleespace_ros</name>
  <version>0.0.1</version>
  <description>SLAM configuration for OleeSpace</description>
  <maintainer email="omgunjal2727@gmail.com">omg</maintainer>
  <maintainer email="rishitdarwade85@gmail.com">omg</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>ros2launch</exec_depend> 

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>